passing default seccomp profile over REST API
