# pkg/api/daemon/openapi.yaml
@@ -33,7 +33,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/BypassStatus'
-  
+
   /bypass/{id}:
     delete:
       parameters:
@@ -45,6 +45,12 @@ paths:
       responses:
         '200':
           description: Null response
+
+  /seccomp/profile/default:
+    get:
+      responses:
+        '200':
+          description: specs.LinuxSeccomp
 
 components:
   schemas:
